--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ a:hover{
 section{
     padding-top: 4vh;
     height:70vh;
-    margin:0,10rem;
+    margin:0 10rem;
     box-sizing:border-box;
     min-height:fit-content;
 }
@@ -85,6 +85,11 @@ section{
     font-size: 1.75rem;
 }
 
+
+.name{
+    text-align: center;
+    font-size: 5rem;
+}
 .title{
     text-align: center;
     font-size: 3.5rem;
@@ -97,14 +102,15 @@ section{
     gap: 5rem;
 }
 
-span{
+.words_to_style{
     font-size: 1.5rem;
     color: blue;
 }
 
 .section__text{
-    align-self:first baseline;
+    align-self: first baseline;
     height: 200px;
+
 }
 .section__text p {
     font-weight:600
@@ -175,12 +181,15 @@ button:hover{
     display: flex;
     justify-content: center;
   }
+
+  .about-details-container{
+    gap: 2rem;
+  }
   
   
   .detail-containers {
     flex: 1;
     padding: 1.5rem;
-    flex: 1;
     background: white;
     border-radius: 2rem;
     width: 500px;
@@ -188,6 +197,12 @@ button:hover{
     border-color: rgb(163, 163, 163);
     text-align:center;
   }
+  
+  .detail-containers ul{
+    display:flex;
+    justify-content: center;
+  }
+  
 
   .icon1{
     height:3.5rem;
@@ -241,12 +256,12 @@ button:hover{
     display:flex;
     justify-content: center;
     border-radius: 2rem;
+    width: 30rem;
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
     background: rgb(250,250,250);
-    margin-left: 750px;
-    margin-right: 750px;
-    padding:0.5rem;
+    margin: 2rem auto;
+    padding: 0.5rem;
 }
 
 .contact-info-container{
@@ -259,6 +274,7 @@ button:hover{
 
 .contact-info-container p{
     font-size: larger;
+    text-align: center;
 }
 
 .contact-icon{
@@ -286,3 +302,102 @@ button:hover{
     background-color: pink;
     transition: background-color 0.5s;
 }
+
+#hamburger-nav{
+    display:none;
+}
+
+.hamburger-menu{
+    position: relative;
+    display: inline-block;
+}
+
+.hamburger-icon{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 24px;
+    width: 30px;
+    cursor: pointer;
+}
+
+.hamburger-icon span{
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links{
+    position: absolute;
+    top: 100%;
+    right: 0%;
+    background-color: white;
+    width: fit-content;
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links a{
+    display: block;
+    padding: 10px;
+    text-align: center;
+    font-size: 1.5rem;
+    color: black;
+    text-decoration: none;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links li{
+    list-style: none;
+}
+
+.menu-links.open{
+    max-height: 300px;
+}
+
+.hamburger-icon.open span:first-child{
+    transform: rotate(45deg) translate(10px,5px);
+}
+
+.hamburger-icon.open span:nth-child(2){
+    opacity: 0;
+}
+
+.hamburger-icon.open span:last-child{
+    transform: rotate(-45deg) translate(10px,-5px);
+}
+
+.hamburger-icon span:first-child{
+    transform:none;
+}
+
+.hamburger-icon span:first-child{
+    opacity:1;
+}
+
+.hamburger-icon span:first-child{
+    transform:none;
+}
+
+#experience{
+    position: relative;
+}
+
+.experience-sub-title{
+    color: rgb(85,85,85);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+}
+
+.article-container{
+    display:flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: space-around;
+}
+
